# aos-backend

./: .gitignore  README.md  manage.py  pyproject.toml
aos_backend/: asgi.py  settings.py  urls.py  wsgi.py
warscroll/: apps.py  models.py  serializer.py  utils.py  views.py
warscroll/migrations/: 0001_initial.py  0002_warscroll_notes.py  0003_alter_warscroll_description.py
