[tool.poetry]
name = "aos-backend"
version = "0.1.0"
description = ""
authors = ["Khoi Le <khoibaka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.1"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
